MFH Fix bug #48679 - Crash in SQLite with count on an unbuffered query set (Scott)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@282747 c90b9560-bf6c-de11-be94-00142212c4b1